<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="alert_message_auto_activate_all_off">Disable all applications to automatically activate in the background may cause some applications to be unable to receive messages, mails in time, or not work properly</string>
    <string name="alert_message_auto_activate_all_on">Allowing all applications to automatically activate in the background may result in a serious increase in power consumption of mobile phones</string>
    <string name="alert_message_auto_activate_off">Disable this application to automatically activate in the background may cause the app to be unable to receive messages in time or not work properly</string>
    <string name="alert_message_auto_activate_on">Allowing this application to automatically activate in the background can result in increased power consumption</string>
    <string name="alert_message_bam_all_off">Disable all applications to continue running in the background after the screen is closed</string>
    <string name="alert_message_bam_all_on">Allow all applications to continue running in the background after the screen is closed</string>
    <string name="alert_message_bam_off">Disable this application to continue running in the background after the screen is closed</string>
    <string name="alert_message_bam_on">Allows this application to continue running in the background after the screen is closed</string>
    <string name="app_label">Power saver</string>
    <string name="auto_activate">"Auto
Activate"</string>
    <string name="background_execution_enabled">true</string>
    <string name="bam_applist">Application list</string>
    <string name="bam_black_list_version">7.0011.14</string>
    <string name="bam_notification_btn_nevershowthis">NEVER SHOW THIS</string>
    <string name="bam_notification_btn_turnon">TURN ON</string>
    <string name="bam_notification_content_text">Turn this on to enhance the battery life!</string>
    <string name="bam_notification_content_title">There are Apps consuming battery in the background.</string>
    <string name="blacklist">Blacklist</string>
    <string name="disauto_black_list_version">7.0011.10</string>
    <string name="dozeTimeout">light_pre_idle_to=300000,idle_after_inactive_to=900000</string>
    <string name="fih_power_saving_apply_notify">Power saver on</string>
    <string name="fih_power_saving_apply_notify_msg">No item enabled</string>
    <string name="fih_power_saving_apply_ticker_msg">Power saver on, no item enabled</string>
    <string name="fih_power_saving_background_activity_text">Enable the Background activity manager to extend battery life, but the notifications of some Apps or Emails may not be able to be retrieved instantly. You can manage the battery life by adding or removing the Apps to or from the whitelist.</string>
    <string name="fih_power_saving_background_activity_text_blacklist">Adding applications into restricted APP list can extend battery life, but the notifications of some Apps or Emails may not be able to be retrieved instantly. You can manage the battery life by adding or removing the Apps to or from the restricted APP list.</string>
    <string name="fih_power_saving_battery_Approx">Approx. %1$s left</string>
    <string name="fih_power_saving_data_turn_on_dialog_msg">To turn on the mechanism may result in that the applications cannot receive realtime information from the Internet during screen off.</string>
    <string name="fih_power_saving_dialog_cancel">Cancel</string>
    <string name="fih_power_saving_dialog_ok">OK</string>
    <string name="fih_power_saving_doze_high_consumption">High power consumption</string>
    <string name="fih_power_saving_enabled_notify_2">Battery Saver enabled.</string>
    <string name="fih_power_saving_enabled_notify_channel_name">General notifications</string>
    <string name="fih_power_saving_enabled_notify_summary">Tap to see the detail</string>
    <string name="fih_power_saving_grayscale_mode_summary">Adjust the screen to grayscale display</string>
    <string name="fih_power_saving_grayscale_mode_title">Grayscale mode</string>
    <string name="fih_power_saving_lpm_dialog_msg">Low power mode is activated.</string>
    <string name="fih_power_saving_mode_is_running_2">Battery Saver mode is running</string>
    <string name="fih_power_saving_notice_dialog_title">Notice</string>
    <string name="fih_power_saving_permission_cancel">Cancel</string>
    <string name="fih_power_saving_permission_first_time_or_always_deny">To work properly, this app requires additional permission. Please allow permission when asked.</string>
    <string name="fih_power_saving_permission_lpm_notification_summary">Tap to allow</string>
    <string name="fih_power_saving_permission_lpm_notification_title">%s requires permissions</string>
    <string name="fih_power_saving_permission_msg">"To work properly, this app requires additional permissions. Please manage %s's permission in Setting."</string>
    <string name="fih_power_saving_permission_settings">Settings</string>
    <string name="fih_power_saving_power_saver_backup_title">Power management</string>
    <string name="fih_power_saving_power_saver_summary">Limit the CPU performance, reduce display brightness, turn off Mobile data, Bluetooth, GPS, Hotspot services and unused Wi-Fi, turn on Data saver, turn off vibrations and animations</string>
    <string name="fih_power_saving_power_saver_summary_wlan">Limit the CPU performance, reduce display brightness, turn off Mobile data, Bluetooth, GPS, Hotspot services and unused WLAN, turn on Data saver, turn off vibrations and animations</string>
    <string name="fih_power_saving_power_saver_title_2">Battery Saver</string>
    <string name="fih_power_saving_pw_turn_on_dialog_msg">To turn on the mechanism may result in that the applications with alarm or notification functions cannot wake up device on time. It is recommended to add those applications into periodic wakeup white list from its setting page.</string>
    <string name="fih_power_saving_reduce_resolution_summary">Reduce display resolution helps save power, and some applications that are currently running may be closed and need to be reopened</string>
    <string name="fih_power_saving_reduce_resolution_title">Reduce display resolution</string>
    <string name="fih_power_saving_request_dialog_cancel">CANCEL</string>
    <string name="fih_power_saving_request_dialog_enable">ENABLE</string>
    <string name="fih_power_saving_request_dialog_msg_2">The remaining battery charge is under %d%%. Do you want to enable Battery Saver to save power? Some functions may be turned off in Battery Saver mode. e.g. GPS</string>
    <string name="fih_power_saving_request_dialog_title_2">Enable Battery Saver ?</string>
    <string name="fih_power_saving_time_schedule_title">Time schedule</string>
    <string name="lock_screen">"Lock
Screen"</string>
    <string name="lock_screen_ap_protect_title">App block list</string>
    <string name="power_saving_dialog_ok">OK</string>
    <string name="powersaving_db_3d_sound">OFF</string>
    <string name="powersaving_db_animation">OFF</string>
    <string name="powersaving_db_autosync">OFF</string>
    <string name="powersaving_db_battery_change_intent_min_interval">6000</string>
    <string name="powersaving_db_battery_saver">OFF</string>
    <string name="powersaving_db_bt">OFF</string>
    <string name="powersaving_db_cpu_limit">ON</string>
    <string name="powersaving_db_data_connection_new">OFF</string>
    <string name="powersaving_db_dc_alwayson">ON</string>
    <string name="powersaving_db_dc_detect_time">60000</string>
    <string name="powersaving_db_dc_end_time">24:00</string>
    <string name="powersaving_db_dc_start_time">08:00</string>
    <string name="powersaving_db_dc_white_list">" "</string>
    <string name="powersaving_db_glance">OFF</string>
    <string name="powersaving_db_gps">OFF</string>
    <string name="powersaving_db_hotspot_timeout">5</string>
    <string name="powersaving_db_limit_vibrate">OFF</string>
    <string name="powersaving_db_mobile_data">OFF</string>
    <string name="powersaving_db_monochromacy">ON</string>
    <string name="powersaving_db_power_saving_begin">20</string>
    <string name="powersaving_db_power_saving_extreme">10</string>
    <string name="powersaving_db_power_saving_mode">-1</string>
    <string name="powersaving_db_process_monitor">1</string>
    <string name="powersaving_db_pw_hide_list">android;com.fihtdc.ironnotifyled;com.fihtdc.powersaving.g3;com.android.deskclock;com.android.calendar;com.qualcomm.wifip2p.service;com.qualcomm.timeservice;com.fihtdc.calendarwidget;com.android.cellbroadcastreceiver;com.android.providers.calendar;com.android.onetimeinitializer;com.android.providers.settings;com.android.DateTimeSetup;com.android.nfc;com.fihtdc.wirelesscharging;com.qualcomm.wfd.service;com.qualcomm.fastdormancy;com.android.phone;com.android.keyguard;com.fihtdc.lockscreen;com.fihtdc.batteryprotect;com.mediatek.schpwronoff;com.evenwell.ironnotifyled;com.evenwell.powersaving.g3;com.evenwell.calendarwidget;com.evenwell.wirelesscharging;com.evenwell.lockscreen;com.evenwell.batteryprotect;</string>
    <string name="powersaving_db_pw_remove_list">com.android.deskclock;com.android.calendar;calendar;com.mediatek.schpwronoff;</string>
    <string name="powersaving_db_pw_time">1800000</string>
    <string name="powersaving_db_pw_white_list">" "</string>
    <string name="powersaving_db_qcom_chip_name">MSM;msm;APQ;apq;</string>
    <string name="powersaving_db_restrict_bd">OFF</string>
    <string name="powersaving_db_screen_bam">ON</string>
    <string name="powersaving_db_screen_light">OFF</string>
    <string name="powersaving_db_screen_resolution">OFF</string>
    <string name="powersaving_db_screen_timeout">15000</string>
    <string name="powersaving_db_service_detect">ON</string>
    <string name="powersaving_db_service_detect_time">180000</string>
    <string name="powersaving_db_smart_switch">OFF</string>
    <string name="powersaving_db_ss_hotspot">OFF</string>
    <string name="powersaving_db_ss_show_hotspot">YES</string>
    <string name="powersaving_db_ss_wifi">OFF</string>
    <string name="powersaving_db_support_cpu">FCNJ;VKY;IVM;VK3;VNA;D78;D70;D7T;D75;D77;PHX;VN2;VN3;JGR;D1C;</string>
    <string name="powersaving_db_support_lpa">FCNJ;VKY;IVM;VK3;VN2;</string>
    <string name="powersaving_db_time_schedule">0</string>
    <string name="powersaving_db_time_schedule_end_time">06:30</string>
    <string name="powersaving_db_time_schedule_mode">0</string>
    <string name="powersaving_db_time_schedule_start_time">22:30</string>
    <string name="powersaving_db_wifi">OFF</string>
    <string name="powersaving_db_wifi_timeout">5</string>
    <string name="powersaving_db_wifihotspot">OFF</string>
    <string name="powersaving_not_support_screen_policy">P1X;</string>
    <string name="powersaving_start_service_delay_time">500</string>
    <string name="powersaving_start_service_method">start_use_intent</string>
    <string name="powersaving_store_settings_method">store_in_self_db</string>
    <string name="powersaving_support_tg_gui">JGR;</string>
    <string name="pref_tile_show_bam">Show Background Activity Manager</string>
    <string name="screen_resolution_4k">4K</string>
    <string name="screen_resolution_fhd">FHD</string>
    <string name="screen_resolution_fhdplus">FHD+</string>
    <string name="screen_resolution_hd">HD</string>
    <string name="screen_resolution_hdplus">HD+</string>
    <string name="screen_resolution_qhd">QHD</string>
    <string name="screen_resolution_qhdplus">QHD+</string>
    <string name="server_url">http://219.90.56.146/api/v1/</string>
    <string name="set_overlay_config_enableAutoPowerModes">Need to set overlay for config_enableAutoPowerModes</string>
    <string name="switch_off_text">Off</string>
    <string name="switch_on_text">On</string>
    <string name="warning">Warning</string>
</resources>
