<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
    <com.evenwell.powersaving.g3.utils.CustSwitchPreference android:title="@string/fih_power_saving_power_saver_title_2" android:key="key_power_saver" />
    <com.evenwell.powersaving.g3.utils.CustSwitchPreference android:title="@string/fih_power_saving_reduce_resolution_title" android:key="key_reduce_resolution" android:summary="@string/fih_power_saving_reduce_resolution_summary" />
    <com.evenwell.powersaving.g3.utils.CustSwitchPreference android:title="@string/fih_power_saving_grayscale_mode_title" android:key="key_grayscale_mode" android:summary="@string/fih_power_saving_grayscale_mode_summary" />
    <com.evenwell.powersaving.g3.utils.CustPreference android:key="key_display_resolution" />
    <com.evenwell.powersaving.g3.utils.CustSwitchPreference android:title="@string/fih_power_saving_time_schedule_title" android:key="key_time_schedule_switch" />
    <com.evenwell.powersaving.g3.utils.CustPreference android:key="key_time_schedule_start_time" />
    <com.evenwell.powersaving.g3.utils.CustPreference android:key="key_time_schedule_end_time" />
</PreferenceScreen>