<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="14.0sp" android:textColor="@color/secondary_text_color" android:gravity="center_vertical" android:id="@id/background_activity_text" android:paddingTop="15.0dip" android:paddingBottom="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fih_power_saving_background_activity_text" android:paddingStart="72.0dip" android:paddingEnd="16.0dip" />
    </LinearLayout>
    <View android:background="@drawable/list_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:gravity="right" android:orientation="horizontal" android:id="@id/check_all_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:layout_marginStart="72.0dip">
        <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/nokia_blue" android:ellipsize="end" android:layout_gravity="bottom" android:orientation="vertical" android:id="@id/allApp" android:layout_width="0.0sp" android:layout_height="wrap_content" android:layout_marginBottom="24.0dip" android:text="@string/bam_applist" android:layout_weight="1.0" />
        <RelativeLayout android:layout_gravity="right" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <LinearLayout android:gravity="right" android:id="@id/check_all_text_layout" android:layout_width="102.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginStart="10.5dip">
                <LinearLayout android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <TextView android:textSize="12.0sp" android:textColor="#ff757575" android:ellipsize="end" android:id="@id/auto_avtivate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/auto_activate" />
                </LinearLayout>
                <LinearLayout android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <TextView android:textSize="12.0sp" android:textColor="#ff757575" android:ellipsize="end" android:id="@id/lock_screen" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lock_screen" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:gravity="right" android:id="@id/check_all_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:layout_below="@id/check_all_text_layout">
                <CheckBox android:layout_gravity="center" android:id="@id/allAppCheckBoxDisAuto" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="20.0dip" android:layout_marginEnd="9.0dip" />
                <CheckBox android:layout_gravity="center" android:id="@id/allAppCheckBoxBAM" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="9.0dip" android:layout_marginEnd="26.0dip" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <ListView android:id="@id/applist" android:layout_width="fill_parent" android:layout_height="fill_parent" android:divider="@null" android:dividerHeight="0.0dip" />
</LinearLayout>